Added Amazon Urchin tracking to pages.

--- a/template/partials/LICENSE.phtml
+++ b/template/partials/LICENSE.phtml
@@ -144,3 +144,6 @@
 		<p>END OF TERMS AND CONDITIONS</p>
 	</div>
 </div>
+
+<script src="http://aws.amazon.com/js/urchin.js"></script>
+<script>urchinTracker();</script>
