--- a/template/partials/README.phtml
+++ b/template/partials/README.phtml
@@ -73,3 +73,6 @@ pear install aws/sdk</pre>
 	</div>
 
 </div>
+
+<script src="http://aws.amazon.com/js/urchin.js"></script>
+<script>urchinTracker();</script>
