--- a/template/partials/constants.phtml
+++ b/template/partials/constants.phtml
@@ -15,3 +15,6 @@
 		<p>There are no constants defined in this class.</p>
 	</div>
 <? endif; ?>
+
+<script src="http://aws.amazon.com/js/urchin.js"></script>
+<script>urchinTracker();</script>
