--- a/template/partials/index.phtml
+++ b/template/partials/index.phtml
@@ -108,3 +108,6 @@
 	<div class="sectiontitle">Alternate Formats</div>
 	<p><a href="../../xml/<?= $template['title'] ?>.xml">XML</a>, <a href="../../json/<?= $template['title'] ?>.js">JSON</a></p>
 </div>
+
+<script src="http://aws.amazon.com/js/urchin.js"></script>
+<script>urchinTracker();</script>
