--- a/template/partials/properties.phtml
+++ b/template/partials/properties.phtml
@@ -24,3 +24,6 @@
 		<p>There are no properties defined in this class.</p>
 	</div>
 <? endif; ?>
+
+<script src="http://aws.amazon.com/js/urchin.js"></script>
+<script>urchinTracker();</script>
