--- a/templates/sdoc2/index.phtml
+++ b/templates/sdoc2/index.phtml
@@ -33,7 +33,7 @@
 					$('#mainContent').attr('src', 'class/' + classIndex.toLowerCase() + '/index.html');
 				}
 				else {
-					$('#mainContent').attr('src', 'README.html');
+					$('#mainContent').attr('src', 'files/included/readme.html');
 				}
 
 				// Write the parent hash to the panel's URL.
