--- a/templates/sdoc2/partials/index.phtml
+++ b/templates/sdoc2/partials/index.phtml
@@ -8,7 +8,7 @@
 					<?php if (isset($this->data->class->inheritance)): ?>
 						<?php foreach ($this->data->class->inheritance->class as $class): ?>
 							<?php if (isset($class->url)): ?>
-								<li><a href="<?php echo (string) $class->url; ?>"><?php echo (string) $class->name; ?></a></li>
+								<li><a href="<?php echo (string) $class->url; ?>" rel="../../index.html#i=<?php echo (string) $class->name; ?>"><?php echo (string) $class->name; ?></a></li>
 							<?php else: ?>
 								<li><?php echo (string) $class->name; ?></li>
 							<?php endif; ?>
@@ -53,11 +53,11 @@
 	<dl class="methods">
 		<?php $method_list = Template::group_by_letter($this->data->class->methods->method, 'name'); ?>
 		<? foreach ($method_list as $letter => $methods): ?>
-			<dt><?= strtoupper($letter) ?></dt>
+			<dt><?php echo strtoupper($letter) ?></dt>
 			<dd>
 				<ul>
 					<? foreach ($methods as $method): ?>
-					<li><a href="<?= $method ?>.html" rel="../../#m=<?= (string) $this->data->class->name ?>/<?php echo $method ?>"><?php echo $method; ?></a></li>
+					<li><a href="<?php echo $method ?>.html" rel="../../index.html#m=<?php echo (string) $this->data->class->name ?>/<?php echo $method ?>"><?php echo $method; ?></a></li>
 					<? endforeach; ?>
 				</ul>
 			</dd>
@@ -70,11 +70,11 @@
 	<dl class="methods constants">
 		<?php $constant_list = Template::group_by_letter($this->data->class->constants->constant, 'name'); ?>
 		<? foreach ($constant_list as $letter => $constants): ?>
-			<dt><?= strtoupper($letter) ?></dt>
+			<dt><?php echo strtoupper($letter) ?></dt>
 			<dd>
 				<ul>
 					<? foreach ($constants as $constant): ?>
-					<li><a href="constants.html#<?= $constant ?>" rel="../../#c=<?= (string) $this->data->class->name ?>/<?php echo $constant ?>"><?php echo $constant; ?></a></li>
+					<li><a href="constants.html#<?php echo $constant ?>" rel="../../index.html#c=<?php echo (string) $this->data->class->name ?>/<?php echo $constant ?>"><?php echo $constant; ?></a></li>
 					<? endforeach; ?>
 				</ul>
 			</dd>
@@ -87,11 +87,11 @@
 	<dl class="methods properties">
 		<?php $property_list = Template::group_by_letter($this->data->class->properties->property, 'name'); ?>
 		<? foreach ($property_list as $letter => $properties): ?>
-			<dt><?= strtoupper($letter) ?></dt>
+			<dt><?php echo strtoupper($letter) ?></dt>
 			<dd>
 				<ul>
 					<? foreach ($properties as $property): ?>
-					<li><a href="properties.html#<?= $property ?>" rel="../../#p=<?= (string) $this->data->class->name ?>/<?php echo $property ?>"><?php echo $property; ?></a></li>
+					<li><a href="properties.html#<?php echo $property ?>" rel="../../index.html#p=<?php echo (string) $this->data->class->name ?>/<?php echo $property ?>"><?php echo $property; ?></a></li>
 					<? endforeach; ?>
 				</ul>
 			</dd>
