--- a/templates/sdoc2/partials/offline_docs.phtml
+++ b/templates/sdoc2/partials/offline_docs.phtml
@@ -37,7 +37,7 @@
 				</div>
 				<div class="grid grid4 gridlast">
 					<div class="default button">
-						<a href="../../sphp/<?php echo (string) $this->classname; ?>.sphp" class="sphp format archive" target="_new" title="Serialized PHP format"><span>.sphp</span></a>
+						<a href="../../php/<?php echo (string) $this->classname; ?>.php" class="sphp format archive" target="_new" title="Serialized PHP format"><span>.php</span></a>
 					</div>
 				</div>
 			</div>
