--- a/templates/sdoc2/partials/properties.phtml
+++ b/templates/sdoc2/partials/properties.phtml
@@ -1,8 +1,8 @@
 <?php if (isset($this->data->class->properties->property)): ?>
 	<?php foreach ($this->data->class->properties->property as $property): ?>
 	<div class="method">
-		<div class="title" id="<?= $property->name ?>">
-			<a name="<?= $property->name ?>" id="<?= $property->name ?>"></a><strong><?= $property->name ?></strong>
+		<div class="title" id="<?php echo $property->name ?>">
+			<a name="<?php echo $property->name ?>" id="<?php echo $property->name ?>"></a><strong><?php echo $property->name ?></strong>
 		</div>
 
 		<div class="description">
