--- a/templates/sdoc2/partials/index.phtml
+++ b/templates/sdoc2/partials/index.phtml
@@ -24,7 +24,7 @@
 				<td><ul>
 					<?php foreach ($this->data->class->implements->interface as $interface): ?>
 						<?php if (isset($interface->url)): ?>
-							<li><a href="<?php echo (string) $interface->url; ?>"><?php echo (string) $interface->name; ?></a></li>
+							<li><a href="<?php echo (string) $interface->url; ?>" rel="../../index.html#i=<?php echo (string) $interface->name; ?>"><?php echo (string) $interface->name; ?></a></li>
 						<?php else: ?>
 							<li><?php echo (string) $interface->name; ?></li>
 						<?php endif; ?>
