--- a/templates/sdoc2/styles/base/main.css
+++ b/templates/sdoc2/styles/base/main.css
@@ -154,6 +154,10 @@ Method style
 	padding: 0;
 }
 
+.method .optionalParameter {
+	white-space: nowrap;
+}
+
 .method .parameterValue {
 	color: #666;
 	font-style: italic;
