Some clean up and bug fixes.

--- a/templates/sdoc2/layout.phtml
+++ b/templates/sdoc2/layout.phtml
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
+		<meta http-equiv="X-UA-Compatible" content="chrome=1; IE=edge">
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<title><?php echo $this->template->titlebar; ?></title>
 		<link rel="stylesheet" href="../../styles/production.min.css" type="text/css" media="screen" charset="utf-8">
+		<script src="../../scripts/frameset.min.js" type="text/javascript" charset="utf-8"></script>
 		<?php echo (isset($this->partials) && isset($this->partials['header'])) ? $this->partials['header'] : ''; ?>
 
 	</head>
