--- a/templates/sdoc2/index.phtml
+++ b/templates/sdoc2/index.phtml
@@ -15,44 +15,7 @@
 		<?php endif; ?>
 
 	    <script src="scripts/production.min.js" type="text/javascript" charset="utf-8"></script>
-		<script type="text/javascript" charset="utf-8">
-		$(function() {
-			$(window).bind('hashchange', function(e) {
-				var method = $.bbq.getState('m'),
-					property = $.bbq.getState('p'),
-					constant = $.bbq.getState('c'),
-					classIndex = $.bbq.getState('i'),
-					defaultIndex = $.bbq.getState('d');
-
-				if (method) {
-					method = method.split('/');
-					$('#mainContent').attr('src', 'class/' + method[0].toLowerCase() + '/' + method[1] + '.html');
-				}
-				else if (property) {
-					property = property.split('/');
-					$('#mainContent').attr('src', 'class/' + property[0].toLowerCase() + '/properties.html#' + property[1]);
-				}
-				else if (constant) {
-					constant = constant.split('/');
-					$('#mainContent').attr('src', 'class/' + constant[0].toLowerCase() + '/constants.html#' + constant[1]);
-				}
-				else if (classIndex) {
-					$('#mainContent').attr('src', 'class/' + classIndex.toLowerCase() + '/index.html');
-				}
-				else if (defaultIndex) {
-					$('#mainContent').attr('src', 'files/included/' + defaultIndex.toLowerCase() + '.html');
-				}
-				else {
-					$('#mainContent').attr('src', 'files/included/readme.html');
-				}
-
-				// Write the parent hash to the panel's URL.
-				$('#panelContent').get(0).src += location.hash;
-
-			});
-			$(window).trigger('hashchange');
-		});
-		</script>
+	    <script src="scripts/frame-loader.min.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<frameset cols="300,*" frameborder="1" border="1" bordercolor="#666666" framespacing="1">
 		<frame src="panel/index.html" title="Search" name="panel" id="panelContent" />
