Did lots of work on rewriting the layout to use a single page instead of a frame.

--- a/templates/default/styles/production.css
+++ b/templates/default/styles/production.css
@@ -5,6 +5,7 @@
 @import "base/banner.css";
 @import "base/grid.css";
 @import "base/overlay.css";
+@import "base/layout.css";
 
 /* Syntax Highlighter */
 @import "syntaxhighlighter/shCore.css";
