--- a/templates/default/styles/base/panel.css
+++ b/templates/default/styles/base/panel.css
@@ -19,18 +19,30 @@
 /* Header with search box (begin) */
 .panel .header {
 	width: 100%;
-	height: 29px;
+	height: 40px;
 	border-bottom: 1px solid #666;
 	position: relative;
 	left: 0; top: 0;
 	background: #e8e8e8;
+	background-image: -moz-linear-gradient(
+		center top,
+		#ebebeb 0%,
+		#dbdbdb 100%
+	);
+	background-image: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		color-stop(0, #ebebeb),
+		color-stop(1, #dbdbdb)
+	);
 }
 
 .panel .header div {
 	margin: 0 7px;
 }
 .panel .header table {
-	height: 29px;
+	height: 40px;
 	width: 100%;
 }
 
@@ -41,8 +53,8 @@
 
 .panel .header label {
 	position: absolute;
-	font-size: 12px;
-	line-height: 29px;
+	font-size: 14px;
+	line-height: 40px;
 	margin-left: 3px;
 	color: #999;
 	cursor: text;
@@ -55,7 +67,7 @@
 	-webkit-box-sizing: border-box;
 	display: inline-block;
 	-webkit-appearance: searchfield;
-	height: 22px;
+	height: 29px;
 	//height: auto;
 }
 
@@ -65,7 +77,7 @@
 /* Results (begin) */
 .panel .result {
 	position: absolute;
-	top: 30px;
+	top: 41px;
 	bottom: 0;
 	left: 0;
 	width: 100%;
@@ -209,7 +221,7 @@
 /* Tree (begin) */ /**/
 .panel .tree {
 	position: absolute;
-	top: 30px;
+	top: 41px;
 	bottom: 0;
 	left: 0;
 	width: 100%;
