Lots of work around rewriting the template to be a single page which loads an iframe. Added search and support for custom search providers.

--- a/templates/default/layout.phtml
+++ b/templates/default/layout.phtml
@@ -14,17 +14,13 @@
 		<?php #endif; ?>
 
 	</head>
-	<body class="body_">
+	<body>
 		<div class="ui-layout-center">
 
 			<div class="center-north">
 				<form action="http://google.com/search" method="get" target="_blank" id="global-search">
-					<input type="hidden" name="tbs" value="cdr:1,cd_min:9/28/2010">
 					<select name="query">
-						<option value="site:forums.aws.amazon.com">AWS PHP Forum</option>
-						<option value="site:stackoverflow.com">StackOverflow</option>
 						<option value="">Google</option>
-						<option value="site:php.net">PHP.net</option>
 					</select>&nbsp;<input type="text" name="q" value="" placeholder="Search...">&nbsp;<input type="submit" value="Search">
 				</form>
 			</div>
